--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "givinghawk/squash-php",
+    "name": "squash-php/squash",
     "description": "Squash your PHP code down!",
     "license": "AGPL-3.0-only",
     "require": {
