--- a/composer.json
+++ b/composer.json
@@ -5,4 +5,12 @@
     "require": {
         "php": ">=7.4"
     }
+    "autoload": {
+        "files": [
+            "src/Squash.php"
+        ],
+        "psr-4": {
+            "Squash\\": "src"
+        }
+    },
 }
