--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "require": {
         "php": ">=7.4"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
     "autoload": {
         "psr-4": {
             "Squash\\": "lib/"
@@ -12,5 +15,10 @@
         "classmap": [
             "legacy"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Squash\\": "tests/"
+        }
     }
 }
