dev/ollama: WIP.

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "Squash your PHP code down!",
     "license": "AGPL-3.0-only",
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
