--- a/.github/workflows/phpdoc.yml
+++ b/.github/workflows/phpdoc.yml
@@ -10,21 +10,11 @@ on:
 
 jobs:
   generate_docs:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.0'
-          extensions: intl, mbstring  # Add any required extensions
-        
-      - name: Install phpDocumentor
-        run: |
-          composer global require --dev phpdocumentor/phpdocumentor
 
       - name: Generate PHP Documentation
         run: phpdoc
